使用 Colaboratory 建立

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hello.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOV/N9sxCEaAemBkATm0Vvq",
+      "authorship_tag": "ABX9TyO6fRLXvuNJgby4JJNhhTtk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "y3mqtwpjON0x"
+        "id": "y3mqtwpjON0x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bfa7fb6b-d6da-4ea2-8b88-f95ffe9c2a14"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HiHi\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "print(\"HiHi\")"
       ]
     }
   ]
