--- a/0608.ipynb
+++ b/0608.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0608.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdxbe5XjfOL0ByS5afzdap",
+      "authorship_tag": "ABX9TyNYc02cw9+5mWBraoEsz5er",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "b9WlwPlv47j5"
       },
@@ -50,7 +50,7 @@
         "id": "qu-LLHf25b8j",
         "outputId": "7c6e4628-1abc-419d-fa2b-898c9be55d19"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "vFCujwUs5fUe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "id": "wKGCQlmm5tI3",
         "outputId": "655d0c08-4ea8-4a7b-f85d-4eed3f39c6fb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "30b3J55a5xZO"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "id": "lMqJ28i75-pl",
         "outputId": "4a26563a-5e72-4173-a335-8e311bec210a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "afdGiM7s6EJe"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         "id": "3aVGMyHm6Hpy",
         "outputId": "49560242-bec6-4dac-fac2-f3385f9461aa"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "2dYIxVBt6Loq"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
         "id": "VouWSC026Rcv",
         "outputId": "21701128-728d-4f54-c098-6137cc747142"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +221,7 @@
         "id": "_GPLe_fM6VAw",
         "outputId": "b0bef94d-e41e-4039-b6c8-4c381b957d5a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
         "id": "5vra8WBj6ci6",
         "outputId": "bb20e9ca-9355-43a9-aea2-e4f5bc666733"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
         "id": "FTWP9h8J7D_H",
         "outputId": "7006a3f9-a1ad-4de9-db94-d3d4b32a5d45"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
       "metadata": {
         "id": "KnTclsbL7MVg"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
         "id": "lTyqyQPN7RtE",
         "outputId": "c53ae609-e225-46ff-f397-49098f1eb85b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
         "id": "d04wuNBV7-xX",
         "outputId": "7432a14e-aa9d-42f2-da0b-ec7949de06fd"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +359,7 @@
         "id": "q7PixH1y8B1l",
         "outputId": "8875ca7a-147c-4d5b-f0ec-7df5410ab59a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "4vbg68H38VIU"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
         "id": "VZfW8uRA8yXy",
         "outputId": "c24e7335-fba7-4ae3-84a3-e1a6a6a9baf5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "id": "Tsm3Yk-H86JO",
         "outputId": "5ff3b372-aacc-4f34-d953-54e86b27ab22"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
         "id": "XZBRfaQ08_cq",
         "outputId": "c05d01ca-03f9-4d1a-cc9c-617f2d90e9de"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
         "id": "1Qxd_k-y9EOH",
         "outputId": "e8e47ccc-5e83-46f5-b462-c1bff1ea59f6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
         "id": "XOFcay229K55",
         "outputId": "6e2dd9bd-25d2-4b47-8f39-aef7cd9b7c10"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +510,7 @@
         "id": "sMWVmtpU9OyD",
         "outputId": "1e8164c2-76ee-41e0-a735-91b043bf01f0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,7 +529,7 @@
       "metadata": {
         "id": "gQAiTHUl9fLD"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -546,7 +546,7 @@
         "id": "puieowNs9sbb",
         "outputId": "dd9da1fa-140b-4c43-cdfe-e68e7ad0744d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +567,7 @@
       "metadata": {
         "id": "dQOK3Kk0-L5Y"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +582,7 @@
         "id": "an11YNBD-UVX",
         "outputId": "dcef7145-fc9d-4276-bbc6-f5e308642f11"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         "id": "DGsB9A9l-csd",
         "outputId": "70a3ad4a-4007-4d82-9523-f8950c601eec"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +624,7 @@
       "metadata": {
         "id": "pXD3nNm6-lZY"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +639,7 @@
         "id": "YqZ5-RN5-yiU",
         "outputId": "d9d4151a-e467-479d-f19b-890375d8d72b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
         "id": "cbm_9fH3-5DL",
         "outputId": "b23b72f0-eb65-45b0-9542-d0beae12d475"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,7 +687,7 @@
         "id": "ERoPSf8i_Ppa",
         "outputId": "f0b08ff0-2bfe-4e8a-b1b4-f4bd9081c947"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +711,7 @@
         "id": "1ZAPxqrp_c83",
         "outputId": "2e206624-6490-4667-8c03-697323c26035"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +736,7 @@
         "id": "3M9okvdD_xrX",
         "outputId": "fe5b78c5-c2ab-46f3-b858-86909708912c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,6 +745,62 @@
             "85\n",
             "79\n",
             "93\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=[1,2,3]\n",
+        "name=[\"Tom\",\"Mary\",\"Tony\"]\n",
+        "for i in range(len(num)):\n",
+        "  print(\"編號:%d\"%num[i],\"姓名:\",name[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ty_C-gpmCZOD",
+        "outputId": "2ffa049d-d924-4857-febc-6f4c3069999e"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "編號:1 姓名: Tom\n",
+            "編號:2 姓名: Mary\n",
+            "編號:3 姓名: Tony\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores=[85,97,93]\n",
+        "list9=[\"國文成績:\",\"數學成績:\",\"英文成績:\"]\n",
+        "for i in range(len(scores)):\n",
+        "  print(list9[i],\"%d分\"%scores[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X4wjbieNMNU-",
+        "outputId": "4047e238-649e-4228-c733-4f9f8b316a03"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "國文成績: 85分\n",
+            "數學成績: 97分\n",
+            "英文成績: 93分\n"
           ]
         }
       ]
